Updated faq (no message)

--- a/faq.txt
+++ b/faq.txt
@@ -5,7 +5,7 @@ title:FAQ
 
 **Is this real?** No. This is a collaborative writing website.
 
-**What is [[[http://scp-wiki.wikidot.com/|the Foundation]]]?** We are the last bastion of security in a world where natural laws rapidly break down. We are here to protect humanity from the things that go bump in the night, from people who wield power beyond mortal understanding. We are here to make the world a safer place. We are the holders of wonders, and the crafters of dreams. We are why the world continues. In the short form, we're a creative writing site, devoted towards horror.
+**What is [[[http://scp-wiki.wikidot.com/|the Foundation]]]?** We are the last bastion of security in a world where natural laws rapidly break down. We are here to protect humanity from the things that go bump in the night, from people who wield power beyond mortal understanding. We are here to make the world a safer place. We are the holders of wonders, and the crafters of dreams. We are why the world continues. In the short form, we're a creative donwriting site, devoted towards horror.
 
 **What does SCP stand for?** "Special Containment Procedures". We generally go with "the Foundation". It also stands for the site motto: "Secure. Contain. Protect."
 
@@ -187,7 +187,7 @@ Here's the deal. It's never said, and the author has laughed in the face of ever
 
 **When a mod says "Stop" they mean, "Talk louder and more stupid", right?** Were you dropped on your head a lot as a child, while eating paint chips, underneath powerlines? If a member of the Senior Staff tells you to stop, you stop, then and there. You are more than welcome to PM them to ask why you have to stop, as long as you understand that when they say a conversation is over - it's over.
 
-**Hey, those decomms are pretty funny. Can I write a shitty article just so you can decomm it?** No. No, no, no, no, no. Did we mention no? Having an SCP so terrible that it has to be decommissioned is NOT a good thing. One of the reasons we don't do them anymore is because people wanted to gain infamy. Also, don't be a fuckwit.
+**Hey, those decomms are pretty funny. Can I write a shitty article just so you can decomm it?** No. No, no, no, no, no. Did we mention no? Having an SCP so terrible that it has to be decommissioned is NOT a good thing. One of the reasons we rarely do them anymore is because people wanted to gain infamy. Also, don't be a fuckwit.
 [[/tab]]
 
 [[/tabview]]
