faq: fixing spelling error

--- a/faq.txt
+++ b/faq.txt
@@ -5,7 +5,7 @@ title:FAQ
 
 **Is this real?** No. This is a collaborative writing website.
 
-**What is [[[http://scp-wiki.wikidot.com/|the Foundation]]]?** We are the last bastion of security in a world where natural laws rapidly break down. We are here to protect humanity from the things that go bump in the night, from people who wield power beyond mortal understanding. We are here to make the world a safer place. We are the holders of wonders, and the crafters of dreams. We are why the world continues. In the short form, we're a creative donwriting site, devoted towards horror.
+**What is [[[http://scp-wiki.wikidot.com/|the Foundation]]]?** We are the last bastion of security in a world where natural laws rapidly break down. We are here to protect humanity from the things that go bump in the night, from people who wield power beyond mortal understanding. We are here to make the world a safer place. We are the holders of wonders, and the crafters of dreams. We are why the world continues. In the short form, we're a creative writing site, devoted towards horror.
 
 **What does SCP stand for?** "Special Containment Procedures". We generally go with "the Foundation". It also stands for the site motto: "Secure. Contain. Protect."
 
